--- a/src/app/shared/components/entity-autocomplete/entity-autocomplete.component.scss
+++ b/src/app/shared/components/entity-autocomplete/entity-autocomplete.component.scss
@@ -42,7 +42,7 @@
 
 .autocomplete-option--empty ion-label {
   font-weight: var(--app-theme-font-weight-bold);
-  color: var(--ion-color-primary);
+  color: var(--app-theme-primary-on-surface);
 }
 
 .autocomplete-option ion-label {
